fix: carousel layout issues
- Move carousel buttons down, out of the displayed image or video
- Apply carousel styles on Safari on IOS devices only

--- a/src/content/dam/wbx/us/images/workspace/styles/_modals.scss
+++ b/src/content/dam/wbx/us/images/workspace/styles/_modals.scss
@@ -191,7 +191,6 @@ $list-items-border-color: #c4c4c4;
 
         .swiper {
           display: block !important;
-          height: calc((100vw * (690 / 768)) - 40px);
           aspect-ratio: 1.2 / 1;
           .swiper-wrapper {
             .swiper-slide {
@@ -204,7 +203,9 @@ $list-items-border-color: #c4c4c4;
               video {
                 max-width: 100%;
                 max-height: 100%;
-              }
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);              }
             }
           }
         }
@@ -587,6 +588,11 @@ $list-items-border-color: #c4c4c4;
   #ws-modal-layer {
     .ws-device-modal-root:not(.ws-displayNone) {
       .ws-device {
+
+        .ws-carousel-nav {
+          top: 6px;
+        }
+
         .ws-device-features.ws-modal-section {
           ul {
             li {
